# voxel-engine

./: .gitignore  .gitmodules  CMakeLists.txt  NotesCompression.txt  README.md  build.bat  build.sh  premake5.lua  test.cpp  voxel-engine.sln
src/: Game.cpp  Game.h  humungus shpungus  main.cpp
src/Core/: Time.h  core.h
src/GLAD/: glad.h
src/Graphics/: Screen.cpp  Screen.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
src/Graphics/Render/: BlockRender.cpp  BlockRender.h  Render.cpp  Render.h  Texture.h
src/Graphics/Texture/: Texture.cpp  TexturePacker.cpp  TexturePacker.h
src/Shaders/: Default.frag  Default.vert
src/World/: Block.cpp  Block.h  chunk.cpp  chunk.h  world.cpp  world.h
src/assets/: blocks.json  textures.json
src/player/: camera.h  input.cpp  input.h  player.cpp  player.h
src/utils/: FileUtils.h
voxel-game/: assetstextures.json  premake5.lua  voxel-game.vcxproj  voxel-game.vcxproj.filters
voxel-game/assets/: textures.json
voxel-game/assets/Shaders/: Default.frag  Default.vert
voxel-game/include/: Game.h
voxel-game/include/Core/: core.h
voxel-game/include/Graphics/: Screen.h
voxel-game/include/Graphics/Render/: Render.h
voxel-game/include/Graphics/Texture/: Texture.h  TexturePacker.h
voxel-game/include/World/: Block.h  chunk.h  world.h
voxel-game/src/: Game.cpp
voxel-game/src/Graphics/: Screen.cpp  Shader.cpp  VertexArray.cpp
voxel-game/src/Graphics/Render/: Render.cpp
voxel-game/src/Player/: input.cpp  player.cpp
voxel-game/src/World/: Block.cpp  chunk.cpp  world.cpp
voxel-game/src/misc/: stb_image.cpp
(+2 files in other folders)
